# universal-physics-index

./: .env.example  .eslintrc.json  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.simulator  LICENSE  LICENSE.MIT  README.md  README.sv.md  ROADMAP.md  SECURITY.md  angelica_loader.py  angelica_simulator.py  docker-compose.simulator.yml  mock_server.py  oden.json  odens_eye.json  openapi.yaml  plugin.schema.json  pyproject.toml  repo_audit.py  run_sim_tests.sh
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: hypothesis.yml
.github/workflows/: ci.yml
config/: ports.json
data/biology/: biological_homochirality.json
data/bridges/: hilbert_state_measured_by_born_rule.json  multi_qudit_register_from_hilbert_spaces.json  qudit_fourier_dual_to_computational_basis.json  qudit_gates_from_hilbert_space.json  torus_search_from_amplitude_amplification.json  torus_search_from_fourier_duality.json  torus_search_from_local_qudit_functions.json  torus_search_from_tensor_register.json  torus_search_stops_at_classical_resource_boundary.json
data/computational_physics/: classical_state_vector_resource_boundary.json
data/constants/: planck.json
data/established/: classical_conservation_momentum.json  classical_newton_second_law.json  classical_work_energy.json  electromagnetism_maxwell.json  quantum_planck_relation.json  quantum_schrodinger.json  relativity_lorentz_invariant.json  thermodynamics_laws.json
data/examples/: agent_circulation.json  double_slit_information.json  eight_hz.json  established_mass_energy.json  hypothesis_8hz.json  invalid_symbolic_as_established.json  quadralith.json  vortex_dna.json
data/information_physics/: digital_qudit_torus_search.json  dual_observer_trace.json
data/mechanics/: helical_linear_rotational_coupling.json
data/open-problems/: dark_matter.json
data/quantum_algorithms/: phase_oracle_diffusion_amplitude_amplification.json
data/quantum_information/: born_probability_rule.json  finite_dimensional_hilbert_state_space.json  generalized_qudit_weyl_gates.json  multi_qudit_tensor_product_register.json  qudit_fourier_dual_basis.json
data/sources/: external_index_sources.json  googlecloudplatform_generative_ai.json
data/theories/: newtonian.json
docs/: AGENT_CIRCULATION.md  ARCHITECTURE.md  AUDIT_AND_PROVENANCE.md  CROKPEDIA_INTEGRATION.md  DIGITAL_QUDIT_TORUS_SEARCH.md  DOUBLE_SLIT_INFORMATION.md  DUAL_OBSERVER_TRACE.md  ENSEMBLE_EVIDENCE.md  ERROR_CODES.md  ESTABLISHED_PHYSICS_CORE.md  EXTERNAL_SOURCE_INDEXING.md  FALSIFICATION.md  FREQUENCY_TYPES.md  FUNCTIONAL_DNA.md  GOOGLECLOUD_GENERATIVE_AI_INDEX.md  HELICAL_LINEAR_ROTATIONAL_DYNAMICS.md  HYPOTHESIS_DESIGN.md  LEGAL_DOMAIN_EXTENSION.md  PROVENANCE.md  QUADRALITH.md  QUDIT_PHYSICS_INDEX.md  SCIENTIFIC_METHOD.md  SCIENTIFIC_NAMING.md  SOFT_EOS_METADATA.md  STATUS_MODEL.md  SYMBOLIC_LAYER.md  UNCERTAINTY.md  VORTEX_DNA.md
examples/: dual_observer_lorentz.py
examples/workflows/: agent-circulation.workflow.json
modules/vrasi-physics/: README.md  pyproject.toml
modules/vrasi-physics/src/vrasi_physics/: __init__.py  __main__.py  core.py
modules/vrasi-physics/tests/: test_core.py  test_helical.py
modules/vrasi-qudit/: README.md  pyproject.toml
modules/vrasi-qudit/src/vrasi_qudit/: __init__.py  __main__.py  core.py  register.py
modules/vrasi-qudit/tests/: test_qudit.py
modules/vrasi-swarm/: README.md  pyproject.toml
modules/vrasi-swarm/src/vrasi_swarm/: __init__.py  __main__.py  core.py  transport.py
modules/vrasi-swarm/tests/: test_swarm.py
schemas/: agent-result.schema.json  agent-task.schema.json  bridge.schema.json  node.schema.json  workflow.schema.json
simulator/: __init__.py  mock_gateway.py
src/upi/: __init__.py  cli.py  constants.py  debug.py  dual_observer.py  graph.py  models.py  physics.py  plugin_loader.py  qudit.py  qudit_register.py  realtime.py  runtime.py  schema_resources.py  validation.py  workflow.py  workflow_engine.py
src/upi/schemas/: node.schema.json  theory.schema.json
tests/: test_cli.py  test_debug.py  test_double_slit_information.py  test_dual_observer.py  test_established_physics_core.py  test_extended_boundaries.py  test_helical_linear_rotational.py  test_normalization.py  test_physics.py  test_platform.py  test_plugin_manifest.py  test_provenance.py  test_qudit_physics_index.py  test_qudit_torus_search.py  test_repo_audit.py  test_repository_audit_regressions.py  test_schema.py  test_simulator_gateway.py  test_status.py  test_symbolic_boundary.py  test_upi.py  test_workflow.py  test_workflow_engine.py
