[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "vrasi-physics"
version = "0.1.0"
description = "Standalone minimal physics kernel for the VR-ASI simulator"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = []

[project.urls]
Homepage = "https://github.com/dpstudio-se/universal-physics-index/tree/main/modules/vrasi-physics"
Repository = "https://github.com/dpstudio-se/universal-physics-index.git"
Issues = "https://github.com/dpstudio-se/universal-physics-index/issues"

[project.scripts]
vrasi-physics = "vrasi_physics.__main__:main"

[tool.setuptools]
packages = ["vrasi_physics"]
package-dir = {"" = "src"}
